# TinyCompute

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  util.cmake
Docs/: cppcon2025.md
Docs/presentations/: cppcon2025.pptx
Docs/presentations/feedback/: feedback.txt
Docs/presentations/source_code/: examples.cpp
Project00/: CMakeLists.txt  Project0.cpp
Projects/FloatAddition/: AddFloats.h  CMakeLists.txt  GameOfLifeWindow.cpp  GameOfLifeWindow.h
Projects/GameOfLife/Step01_QuadrupleFor/: CMakeLists.txt  Kernel.cpp  Kernel.hpp
Projects/GameOfLife/Step02_Ranges/: CMakeLists.txt  Kernel.cpp  Kernel.hpp  main.cpp
Projects/GameOfLife/Step03_Workgroups/: CMakeLists.txt  Kernel.cpp  Kernel.hpp  main.cpp
Projects/GameOfLife/Step04_ComputeShader/: CMakeLists.txt  GameOfLife.h  GameOfLifeWindow.cpp  GameOfLifeWindow.h  kernel.cpp
Projects/GameOfLife/Step05_ComputeShaderImages/: CMakeLists.txt  GameOfLife.h  GameOfLifeWindow.cpp  GameOfLifeWindow.h
Projects/Project01/: CMakeLists.txt  GameOfLife.h  GameOfLifeTest.h  GameOfLifeWindow.cpp  GameOfLifeWindow.h  main.cpp
Projects/Project02/: CMakeLists.txt  GameOfLife.h  GameOfLifeTest.h  GameOfLifeWindow.cpp  GameOfLifeWindow.h  main.cpp
Projects/Project03/: CMakeLists.txt  GameOfLife.h  GameOfLifeWindow.cpp  GameOfLifeWindow.h  dumpast.bat  main.cpp
Projects/Project04/: RayTracer01.h
Projects/Project05/: RayTracer02.h  RayTracerWindow.cpp  RayTracerWindow.h
Projects/Raytracer/Project04/: CMakeLists.txt  RayTracer01.h  RayTracerWindow.cpp  RayTracerWindow.h  main.cpp
Projects/Raytracer/Project05/: CMakeLists.txt  RayTracer02.h  RayTracerWindow.cpp  RayTracerWindow.h
Projects/Raytracer/RaytracerCpu/: CMakeLists.txt  RayTracerCPU.hpp  RayTracerWindow.cpp  RayTracerWindow.hpp  main.cpp
TinyCompute/: CMakeLists.txt  computebackend.hpp  kernel_intrinsics.hpp  swizzle.hpp  vec.hpp
TinyCompute/images/: ImageFormat.h  ImageFormat.hpp
TinyCompute/math/: arithmetic.hpp  linearalgebra.hpp
assetlib/: CMakeLists.txt  ImageLoader.cpp  ImageLoader.h
examples/: CMakeLists.txt  main.cpp
opengl/: CMakeLists.txt  ColorFormat.h  Compute.h  Compute.hpp  ComputeShader.cpp  ComputeShader.h  ComputeShader.hpp  ComputeWindow.h  ComputeWindow.hpp  GLImage.cpp  GLImage.h  ImageFormat.h  OpenGLBackend.h  OpenGLBackend.hpp  ShaderBuffer.h  SurfaceRenderer.cpp  SurfaceRenderer.h  SurfaceRenderer.hpp
swizzleforge/: CMakeLists.txt  annotations.hpp  computebackend.hpp  kernel_intrinsics.hpp  swizzle.hpp  vec.hpp  vecproxy.h
swizzleforge/images/: ImageFormat.h
swizzleforge/math/: arithmetic.hpp
tests/: CMakeLists.txt  pixel_tests.cpp  vec_tests.cpp
tests/ast/: matchers.txt
transpiler/: CMakeLists.txt  ImageFormatDescriptor.h  ImageLayoutDescriptor.h  KernelRewriter.cpp  KernelRewriter.h  KernelStruct.h  KernelValidator.h  PendingEdit.h  TranspileAction.h  transpile_main.cpp
transpiler/callbacks/: BindingPointCallback.h  CpuMethodCallback.h
transpiler/matchers/: KernelLocatorCallback.h  LocalSizeCallback.h
